Thu Mar 25 22:27:11 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/DatabaseMetaData/TestJdbc10.java: Add
	!JDK1.2 to keys.

Thu Mar 25 22:26:04 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/Connection/TestJdbc10.java: Add !JDK1.2
	to keys.

Thu Mar 25 22:23:22 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/io/StringWriter/Test.java: Check for exception
	in close()

Wed Mar 24 21:11:20 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/text/Annotation/Test.java: Added this test case.

1999-03-23  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/text/BreakIterator/sentiter.java: New file.

	* gnu/testlet/java/text/BreakIterator/lineiter.java: New file.

1999-03-22  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/text/BreakIterator/worditer.java (check): Added
	`name' argument.  Now do checks of previous() method as well.

	* gnu/testlet/java/text/BreakIterator/worditer.java: New file.

1999-03-21  Artur Biesiadowski <abies@pg.gda.pl>

	* gnu/testlet/java/util/BitSet/jdk10.java: Made `and' test more
	robust.

1999-03-19  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/text/BreakIterator/chariter.java: New file.

1999-03-18  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/SimpleTestHarness.java (main): Examine all
	arguments.

1999-03-16  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Boolean/BooleanTest.java (test_equals):
	Fixed incorrect test.

	* Makefile.in: Rebuilt.
	* Makefile.am (harness_files): Added config.java.

	* gnu/testlet/java/lang/Boolean/BooleanTest.java (test): Renamed
	argument.

1999-03-16  Anthony Green  <green@cygnus.com>

	* configure.in: Add --with-tmpdir option
	* configure: Rebuilt.
	
	* Makefile.am: Don't pass the source directory to SimpleTestHarness.
	* Makefile.in: Rebuilt.

	* gnu/testlet/TestHarness.java: Add getTempDirectory.
	* gnu/testlet/SimpleTestHarness.java: Use config interface